# CHIP8Emu

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: chip8.c  chip8.h  host_io.h  main.c  opcode.c  opcode.h
